--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="view1/directive.js"></script>
+  <script src="view2/map.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
