--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,5 +1,31 @@
-<p>This is the partial for view 2.</p>
+<div><p>This is the partial for view 2.</p>
 <p>
   Showing of 'interpolate' filter:
   {{ 'Current version is v%VERSION%.' | interpolate }}
 </p>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <div svg-map></div>
+          <div class="scale">
+            <div ng-repeat="n in [0,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0]" ng-style="{backgroundColor:'{{n | map_colour}}'}">{{n}}></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <p>
+        <button ng-click="createDummyData()" class="btn btn-block btn-default">Create Dummy Data</button>
+      </p>
+      <div class="regionlist">
+        <div ng-repeat="(key,region) in dummyData" ng-class="{active:hoverRegion==key}" ng-mouseover="changeHoverRegion(key)">
+          <div>{{key}}</div>
+          <div>{{region.value | number}}</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
