Oops missed adding controller

--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -4,7 +4,7 @@
   {{ 'Current version is v%VERSION%.' | interpolate }}
 </p>
 </div>
-<div class="container">
+<div class="container" ng-controller="MainCtrl">
   <div class="row">
     <div class="col-md-6">
       <div class="panel panel-default">
